--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
 
         <footer>
             This AI project was coded by
-            <a href="https://github.com/matthieua/" target="_blank">Matt Delac</a>
+            <a href="" target="_blank">Fatima Rajaee</a>
             and is
-            <a href="https://github.com/shecodesio/french-poem-generator" target="_blank">
+            <a href="" target="_blank">
                 open-sourced on GitHub</a>
             and is
-            <a href="https://ai-french-poem-generator.netlify.app/" target="_blank">hosted on Netlify</a>.
+            <a href="" target="_blank">hosted on Netlify</a>.
         </footer>
     </div>
 
