--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 
         <footer>
             This AI project was coded by
-            <a href="" target="_blank">Fatima Rajaee</a>
+            <a href="#" target="_blank">Fatima Rajaee</a>
             and is
-            <a href="" target="_blank">
+            <a href="https://github.com/FatimaRajaee/french-poem-generator.git" target="_blank">
                 open-sourced on GitHub</a>
             and is
             <a href="" target="_blank">hosted on Netlify</a>.
