--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <a href="https://github.com/FatimaRajaee/french-poem-generator.git" target="_blank">
                 open-sourced on GitHub</a>
             and is
-            <a href="" target="_blank">hosted on Netlify</a>.
+            <a href="https://french-poem-by-fatima.netlify.app/" target="_blank">hosted on Netlify</a>.
         </footer>
     </div>
 
